--- a/_includes/headContents.html
+++ b/_includes/headContents.html
@@ -11,7 +11,7 @@
   }
 </script>
 <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
