--- a/styles/main.css
+++ b/styles/main.css
@@ -33,12 +33,12 @@ nav ul.main-nav > li a {
   /* [archetype:styleguide:end] --- `medium muted headline in a module, link in a module` --- */
   color: #FFF;
 }
-/* line 193, ../vendor/ruby/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 nav ul.main-nav > li a {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
 }
-/* line 263, ../vendor/ruby/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
+/* line 263, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
 nav ul.main-nav > li a.hover, nav ul.main-nav > li a:hover, nav ul.main-nav > li a.focus, nav ul.main-nav > li a:focus {
   text-decoration: underline;
 }
@@ -66,7 +66,7 @@ nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
   clip: rect(1px, 1px, 1px, 1px);
 }
-/* line 157, ../vendor/ruby/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 157, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 .ie.lte7 nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:begin] --- ie lte 7 --- */
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
@@ -147,7 +147,7 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `xlarge headline` --- */
   font-size: 28px;
 }
-/* line 193, ../vendor/ruby/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 #content > h1 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
@@ -162,7 +162,7 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `large headline` --- */
   font-size: 20px;
 }
-/* line 193, ../vendor/ruby/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 #content > h2 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
